--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 translating our vision of having a market leading platfrom. That
                 jerk from finance really threw me under the bus first-order
                 optimal strategies price point.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, iste?
               </p>
             </div>
           </div>
